--- a/android/app/src/main/res/layout/content_session_detail.xml
+++ b/android/app/src/main/res/layout/content_session_detail.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/content_margin">
+            android:padding="@dimen/padding_large">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -31,7 +31,7 @@
                     android:id="@+id/title_session"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/heading_text_size"
                     android:text="Title"/>
 
                 <TextView
@@ -39,23 +39,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     style="@style/TextAppearance.AppCompat.Subhead"
-                    android:layout_marginBottom="@dimen/track_title_margin"
+                    android:layout_marginBottom="@dimen/layout_margin_medium"
                     android:textColor="@color/primary_text"
                     android:text="Session Subtitle" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/track_title_margin"
+                    android:layout_marginBottom="@dimen/layout_margin_medium"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/track_title_margin"
-                        android:layout_marginRight="@dimen/track_title_margin"
+                        android:layout_marginEnd="@dimen/layout_margin_medium"
+                        android:layout_marginRight="@dimen/layout_margin_medium"
                         android:text="@string/tracks"
-                        android:textSize="@dimen/track_data_size"
+                        android:textSize="@dimen/text_size"
                         android:textColor="@color/primary_text"
                         android:textStyle="bold" />
 
@@ -63,23 +63,23 @@
                         android:id="@+id/track"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/track_data_size"
+                        android:textSize="@dimen/text_size"
                         android:textColor="@color/primary_text" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/track_title_margin"
+                    android:layout_marginBottom="@dimen/layout_margin_medium"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/track_title_margin"
-                        android:layout_marginRight="@dimen/track_title_margin"
+                        android:layout_marginEnd="@dimen/layout_margin_medium"
+                        android:layout_marginRight="@dimen/layout_margin_medium"
                         android:text="@string/date"
-                        android:textSize="@dimen/track_data_size"
+                        android:textSize="@dimen/text_size"
                         android:textColor="@color/primary_text"
                         android:textStyle="bold" />
 
@@ -87,23 +87,23 @@
                         android:id="@+id/date_session"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/track_data_size"
+                        android:textSize="@dimen/text_size"
                         android:textColor="@color/primary_text" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/track_title_margin"
+                    android:layout_marginBottom="@dimen/layout_margin_medium"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/track_title_margin"
-                        android:layout_marginRight="@dimen/track_title_margin"
+                        android:layout_marginEnd="@dimen/layout_margin_medium"
+                        android:layout_marginRight="@dimen/layout_margin_medium"
                         android:text="@string/start_time"
-                        android:textSize="@dimen/track_data_size"
+                        android:textSize="@dimen/text_size"
                         android:textColor="@color/primary_text"
                         android:textStyle="bold" />
 
@@ -111,23 +111,23 @@
                         android:id="@+id/start_time_session"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/track_data_size"
+                        android:textSize="@dimen/text_size"
                         android:textColor="@color/primary_text" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/track_title_margin"
+                    android:layout_marginBottom="@dimen/layout_margin_medium"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/track_title_margin"
-                        android:layout_marginRight="@dimen/track_title_margin"
+                        android:layout_marginEnd="@dimen/layout_margin_medium"
+                        android:layout_marginRight="@dimen/layout_margin_medium"
                         android:text="@string/end_time"
-                        android:textSize="@dimen/track_data_size"
+                        android:textSize="@dimen/text_size"
                         android:textColor="@color/primary_text"
                         android:textStyle="bold" />
 
@@ -135,23 +135,23 @@
                         android:id="@+id/end_time_session"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/track_data_size"
+                        android:textSize="@dimen/text_size"
                         android:textColor="@color/primary_text" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/track_title_margin"
+                    android:layout_marginBottom="@dimen/layout_margin_medium"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/track_title_margin"
-                        android:layout_marginRight="@dimen/track_title_margin"
+                        android:layout_marginEnd="@dimen/layout_margin_medium"
+                        android:layout_marginRight="@dimen/layout_margin_medium"
                         android:text="@string/location"
-                        android:textSize="@dimen/track_data_size"
+                        android:textSize="@dimen/text_size"
                         android:textColor="@color/primary_text"
                         android:textStyle="bold" />
 
@@ -159,7 +159,7 @@
                         android:id="@+id/tv_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/track_data_size"
+                        android:textSize="@dimen/text_size"
                         android:textColor="@color/primary_text" />
                 </LinearLayout>
                 <android.support.v7.widget.RecyclerView
@@ -167,8 +167,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clipToPadding="false"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"/>
+                    android:paddingBottom="@dimen/padding_medium"
+                    android:paddingTop="@dimen/padding_medium"/>
             </LinearLayout>
 
             <TextView
@@ -176,7 +176,7 @@
                 style="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/content_margin"
+                android:layout_marginTop="@dimen/layout_margin_large"
                 android:textIsSelectable="true"
                 tools:text="Open Event" />
 
@@ -184,8 +184,8 @@
                 android:id="@+id/tv_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/content_margin"
-                android:textSize="16sp"
+                android:layout_marginTop="@dimen/layout_margin_large"
+                android:textSize="@dimen/text_size"
                 android:textColor="@android:color/black"
                 android:gravity="start"
                 android:textIsSelectable="true"
