--- a/android/app/src/main/res/layout/nav_header.xml
+++ b/android/app/src/main/res/layout/nav_header.xml
@@ -4,7 +4,7 @@
     android:layout_height="192dp"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:padding="4dp"
+    android:padding="@dimen/padding_small"
     android:background="@color/color_primary"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
