--- a/android/app/src/main/res/layout/bookmark_widget.xml
+++ b/android/app/src/main/res/layout/bookmark_widget.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/widget_margin">
+    android:padding="@dimen/padding_medium">
 
 
     <LinearLayout
@@ -27,8 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="0.80"
-            android:paddingLeft="@dimen/card_margin"
-            android:paddingStart="@dimen/card_margin"
+            android:paddingLeft="@dimen/padding_medium"
+            android:paddingStart="@dimen/padding_medium"
             android:text="@string/bookmarks"
             android:textColor="@color/cardview_dark_background"
             android:textSize="24sp" />
