--- a/android/app/src/main/res/layout/fragment_bookmarks.xml
+++ b/android/app/src/main/res/layout/fragment_bookmarks.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="7dp">
+    android:padding="@dimen/padding_medium">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_bookmarks"
