--- a/android/app/src/main/res/layout/list_speakers.xml
+++ b/android/app/src/main/res/layout/list_speakers.xml
@@ -25,8 +25,8 @@
             android:layout_height="match_parent"
             android:clipToPadding="false"
             tools:listitem="@layout/item_speaker"
-            android:columnWidth="@dimen/speakers_entry_width"
-            android:padding="@dimen/item_margin"
+            android:columnWidth="@dimen/widget_default_height"
+            android:padding="@dimen/padding_small"
             android:visibility="gone"
             tools:visibility="visible"/>
 
