--- a/android/app/src/main/res/layout/tracksactvity_item.xml
+++ b/android/app/src/main/res/layout/tracksactvity_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/session_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/card_margin">
+        android:layout_margin="@dimen/layout_margin_medium">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
@@ -27,7 +27,7 @@
                     android:layout_height="100dp"
                     android:orientation="vertical"
                     android:background="@color/color_primary"
-                    android:padding="@dimen/card_margin"
+                    android:padding="@dimen/padding_medium"
                     android:id="@+id/titleLinearLayout">
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -58,13 +58,13 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/white"
                         android:fontFamily="sans-serif"
-                        android:textSize="20sp"/>
+                        android:textSize="@dimen/heading_text_size"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:padding="@dimen/card_margin">
+                    android:padding="@dimen/padding_medium">
                     <TextView
                         android:id="@+id/session_subtitle"
                         android:text="Session Subtitle"
@@ -75,7 +75,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/track_title_margin"
+                        android:layout_marginBottom="@dimen/layout_margin_medium"
                         android:orientation="horizontal"
                         android:gravity="center_vertical">
                         <ImageView
@@ -86,17 +86,17 @@
                             android:id="@+id/session_track"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/track_data_size"
+                            android:textSize="@dimen/text_size"
                             android:text="Track Name"
                             android:textColor="@color/primary_text"
-                            android:layout_marginLeft="@dimen/sessionList_item_margins"
-                            android:layout_marginStart="@dimen/sessionList_item_margins"/>
+                            android:layout_marginLeft="@dimen/layout_margin_large"
+                            android:layout_marginStart="@dimen/layout_margin_large"/>
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/track_title_margin"
+                        android:layout_marginBottom="@dimen/layout_margin_medium"
                         android:orientation="horizontal"
                         android:gravity="center_vertical">
                         <ImageView
@@ -107,17 +107,17 @@
                             android:id="@+id/session_date"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/track_data_size"
+                            android:textSize="@dimen/text_size"
                             android:text="Date of Event"
                             android:textColor="@color/primary_text"
-                            android:layout_marginLeft="@dimen/sessionList_item_margins"
-                            android:layout_marginStart="@dimen/sessionList_item_margins"/>
+                            android:layout_marginLeft="@dimen/layout_margin_large"
+                            android:layout_marginStart="@dimen/layout_margin_large"/>
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/track_title_margin"
+                        android:layout_marginBottom="@dimen/layout_margin_medium"
                         android:orientation="horizontal">
                         <ImageView
                             android:layout_width="24dp"
@@ -128,16 +128,16 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Session Timings"
-                            android:textSize="@dimen/track_data_size"
+                            android:textSize="@dimen/text_size"
                             android:textColor="@color/primary_text"
-                            android:layout_marginLeft="@dimen/sessionList_item_margins"
-                            android:layout_marginStart="@dimen/sessionList_item_margins"/>
+                            android:layout_marginLeft="@dimen/layout_margin_large"
+                            android:layout_marginStart="@dimen/layout_margin_large"/>
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/track_title_margin"
+                        android:layout_marginBottom="@dimen/layout_margin_medium"
                         android:orientation="horizontal">
                         <ImageView
                             android:layout_width="24dp"
@@ -147,11 +147,11 @@
                             android:id="@+id/session_location"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/track_data_size"
+                            android:textSize="@dimen/text_size"
                             android:text="Session Location"
                             android:textColor="@color/primary_text"
-                            android:layout_marginLeft="@dimen/sessionList_item_margins"
-                            android:layout_marginStart="@dimen/sessionList_item_margins"/>
+                            android:layout_marginLeft="@dimen/layout_margin_large"
+                            android:layout_marginStart="@dimen/layout_margin_large"/>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
