--- a/android/app/src/main/res/layout/widget_list_item.xml
+++ b/android/app/src/main/res/layout/widget_list_item.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="@dimen/layout_margin_medium"
         android:textColor="@color/primary_text"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
 
@@ -24,7 +24,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="12dp"
+        android:layout_marginRight="@dimen/layout_margin_medium"
         android:layout_alignBottom="@+id/bullet"
         android:layout_toRightOf="@+id/bullet"
         android:layout_toEndOf="@+id/bullet"
@@ -52,6 +52,6 @@
         android:layout_alignRight="@+id/date_widget_bookmarks"
         android:layout_alignEnd="@+id/date_widget_bookmarks"
         android:textColor="@color/secondary_text"
-        android:layout_marginBottom="5dp"/>
+        android:layout_marginBottom="@dimen/layout_margin_small"/>
 
 </RelativeLayout>
