removed some warnings on running Android Lint (#1145)

--- a/android/app/src/main/res/layout/item_track.xml
+++ b/android/app/src/main/res/layout/item_track.xml
@@ -18,6 +18,7 @@
 
         <ImageView
             android:id="@+id/imageView"
+            android:contentDescription="@string/item_track"
             android:layout_width="50dp"
             android:layout_height="50dp" />
 
